[Refactor]: MartService 및 dto 리팩토링