@@ -1,8 +1,8 @@
 package com.backend.martall.domain.mart.service;
 
-import com.backend.martall.domain.item.dto.ItemMartNewResponseDto;
-import com.backend.martall.domain.item.service.ItemService;
-import com.backend.martall.domain.itemlike.service.ItemLikeService;
+import com.backend.martall.domain.item.entity.Item;
+import com.backend.martall.domain.item.repository.ItemRepository;
+import com.backend.martall.domain.itemlike.repository.ItemLikeRepository;
 import com.backend.martall.domain.mart.dto.*;
 import com.backend.martall.domain.mart.entity.MartCategory;
 import com.backend.martall.domain.mart.entity.MartShop;
@@ -22,6 +22,7 @@ import java.util.List;
 import java.util.stream.Collectors;
 
 import static com.backend.martall.global.exception.ResponseStatus.MART_NAME_NOT_FOUND;
+import static com.backend.martall.global.exception.ResponseStatus.NOT_EXIST_USER;
 
 @Service
 @RequiredArgsConstructor
@@ -30,9 +31,8 @@ public class MartService {
     private final MartRepository martRepository;
     private final UserRepository userRepository;
     private final MartBookmarkRepository martBookmarkRepository;
-    private final ItemLikeService itemLikeService;
-
-    private final ItemService itemService;
+    private final ItemLikeRepository itemLikeRepository;
+    private final ItemRepository itemRepository;
 
 
     // 마트샵 생성 (테스트)
@@ -49,7 +49,8 @@ public class MartService {
 
     // 마트 생성
     public void createMart(Long userIdx, MartCreateRequestDto martCreateRequestDto) {
-        User user = userRepository.findByUserIdx(userIdx).get();
+        User user = userRepository.findByUserIdx(userIdx)
+                .orElseThrow(() -> new BadRequestException(ResponseStatus.NOT_EXIST_USER));
 
         MartShop martShop = martCreateRequestDto.toEntity();
         martShop.addUser(user);
@@ -73,13 +74,14 @@ public class MartService {
 
     // shopId로 마트샵의 상세정보 조회
     public MartDetailResponseDto getMartDetail(Long shopId, Long userIdx) {
-        User user = userRepository.findByUserIdx(userIdx).get();
+        User user = userRepository.findByUserIdx(userIdx)
+                .orElseThrow(() -> new BadRequestException(ResponseStatus.NOT_EXIST_USER));
 
         MartShop martShop = martRepository.findById(shopId)
                 .orElseThrow(() -> new BadRequestException(ResponseStatus.MART_DETAIL_FAIL));
 
         // dto 생성
-        MartDetailResponseDto martDetailResponseDto = MartDetailResponseDto.builder()
+        return MartDetailResponseDto.builder()
                 .martId(martShop.getMartShopId())
                 .martImg(martShop.getProfilePhoto())
                 .martName(martShop.getName())
@@ -87,7 +89,7 @@ public class MartService {
                         .map(MartCategory::getCategoryName)
                         .collect(Collectors.toList()))
                 .bookmarkCount(martShop.getMartBookmarks().size())
-                .likeCount(itemLikeService.countItemLikeByMart(martShop))
+                .likeCount(itemLikeRepository.countItemLikeByMart(martShop))
                 .martBookmark(martBookmarkRepository.existsByUserAndMartShop(user, martShop))
                 .martAddress(martShop.getAddress())
                 // --> 나중에 만든 회원명으로 교체
@@ -95,8 +97,6 @@ public class MartService {
                 .martNumber(martShop.getShopNumber())
                 .martOperationTime(martShop.getOperatingTime())
                 .build();
-
-        return martDetailResponseDto;
     }
 
 
@@ -104,7 +104,8 @@ public class MartService {
     // -> 페이징 추가 필요
     public List<MartResponseDto> searchMarts(String keyword, Long userIdx) {
 
-        User user = userRepository.findByUserIdx(userIdx).get();
+        User user = userRepository.findByUserIdx(userIdx)
+                .orElseThrow(() -> new BadRequestException(ResponseStatus.NOT_EXIST_USER));
         List<MartShop> martShopList = martRepository.findByKeyword(keyword);
 
         return generateMartList(martShopList, user);
@@ -113,33 +114,29 @@ public class MartService {
 
     // 카테고리 지수 검색
     public List<MartWithItemResponseDto> searchMartsByCategoryAndRating(String tag, Integer minBookmark, Integer maxBookmark, Integer minLike, Integer maxLike, String sort, Long userIdx) {
-        User user = userRepository.findByUserIdx(userIdx).get();
+        User user = userRepository.findByUserIdx(userIdx)
+                .orElseThrow(() -> new BadRequestException(ResponseStatus.NOT_EXIST_USER));
 
         // 존재하지 않는 태그면 예외처리
         if (!MartTag.existByName(tag)) {
             throw new BadRequestException(ResponseStatus.MART_TAG_WRONG);
         }
 
-        List<MartShop> martShopList;
-        if (sort.equals("기본")) {
-            martShopList = martRepository.searchByFilter(tag, minBookmark, maxBookmark, minLike, maxLike);
-        } else if (sort.equals("최신")) {
-            martShopList = martRepository.searchByFilterCreatedAtDesc(tag, minBookmark, maxBookmark, minLike, maxLike);
-        } else if (sort.equals("단골")) {
-            martShopList = martRepository.searchByFilterBookmarkDesc(tag, minBookmark, maxBookmark, minLike, maxLike);
-        } else if (sort.equals("찜")) {
-            martShopList = martRepository.searchByFilterLikeDesc(tag, minBookmark, maxBookmark, minLike, maxLike);
-        } else {
-            throw new BadRequestException(ResponseStatus.MART_SORT_WRONG);
-        }
+        List<MartShop> martShopList = switch (sort) {
+            case "기본" -> martRepository.searchByFilter(tag, minBookmark, maxBookmark, minLike, maxLike);
+            case "최신" -> martRepository.searchByFilterCreatedAtDesc(tag, minBookmark, maxBookmark, minLike, maxLike);
+            case "단골" -> martRepository.searchByFilterBookmarkDesc(tag, minBookmark, maxBookmark, minLike, maxLike);
+            case "찜" -> martRepository.searchByFilterLikeDesc(tag, minBookmark, maxBookmark, minLike, maxLike);
+            default -> throw new BadRequestException(ResponseStatus.MART_SORT_WRONG);
+        };
 
         return generateMartWithItemList(martShopList, user);
     }
 
 
     //mart 전체 조회
-    public List<MartWithItemResponseDto> findAllMarts(Long userId) {
-        User user = userRepository.findById(userId).orElseThrow(() -> new BadRequestException(ResponseStatus.NOT_EXIST_USER));
+    public List<MartWithItemResponseDto> findAllMarts(Long userIdx) {
+        User user = userRepository.findById(userIdx).orElseThrow(() -> new BadRequestException(NOT_EXIST_USER));
         List<MartShop> martShopList = martRepository.findAll();
 
         return generateMartWithItemList(martShopList, user);
@@ -148,63 +145,86 @@ public class MartService {
     // 상품 없는 마트 정보 반환
     // (키워드 검색, 단골마트 조회)
     public List<MartResponseDto> generateMartList(List<MartShop> martShopList, User user) {
-        List<MartResponseDto> martResponseDtoList = martShopList.stream()
+        return martShopList.stream()
                 // 각 martshop 객체 dto로 변경
-                .map(martShop -> {
-                    MartResponseDto martKeywordSearchResponseDto = MartResponseDto.builder()
-                            .martId(martShop.getMartShopId())
-                            .martName(martShop.getName())
-                            .martCategory(martShop.getMartCategories().stream()
-                                    .map(MartCategory::getCategoryName)
-                                    .collect(Collectors.toList()))
-                            .bookmarkCount(martShop.getMartBookmarks().size())
-                            .likeCount(itemLikeService.countItemLikeByMart(martShop))
-                            .martBookmark(martBookmarkRepository.existsByUserAndMartShop(user, martShop))
-                            .build();
-
-                    return martKeywordSearchResponseDto;
-                })
-                .collect(Collectors.toList());
-
-        return martResponseDtoList;
+                .map(martShop -> MartResponseDto.builder()
+                        .martId(martShop.getMartShopId())
+                        .martName(martShop.getName())
+                        .martCategory(martShop.getMartCategories().stream()
+                                .map(MartCategory::getCategoryName)
+                                .collect(Collectors.toList()))
+                        .bookmarkCount(martShop.getMartBookmarks().size())
+                        .likeCount(itemLikeRepository.countItemLikeByMart(martShop))
+                        .martBookmark(martBookmarkRepository.existsByUserAndMartShop(user, martShop))
+                        .build())
+                .toList();
     }
 
     // 상품과 함께 마트 정보 반환
     // (마트 전체 검색, 마트 필터 검색)
     public List<MartWithItemResponseDto> generateMartWithItemList(List<MartShop> martShopList, User user) {
-        List<MartWithItemResponseDto> martWithItemResponseDtoList = martShopList.stream()
-                .map(martShop -> {
-                    MartWithItemResponseDto martWithItemResponseDto = MartWithItemResponseDto.builder()
-                            .martId(martShop.getMartShopId())
-                            .martName(martShop.getName())
-                            .martCategory(martShop.getMartCategories().stream()
-                                    .map(martCategory -> martCategory.getCategoryName())
-                                    .collect(Collectors.toList()))
-                            .bookmarkCount(martShop.getMartBookmarks().size())
-                            .likeCount(itemLikeService.countItemLikeByMart(martShop))
-                            .martBookmark(martBookmarkRepository.existsByUserAndMartShop(user, martShop))
-                            .items(itemService.getMartNewItem(martShop, user))
-                            .build();
-
-                    return martWithItemResponseDto;
-
-                })
-                .collect(Collectors.toList());
-
-        return martWithItemResponseDtoList;
+        return martShopList.stream()
+                .map(martShop -> MartWithItemResponseDto.builder()
+                        .martId(martShop.getMartShopId())
+                        .martName(martShop.getName())
+                        .martCategory(martShop.getMartCategories().stream()
+                                .map(MartCategory::getCategoryName)
+                                .collect(Collectors.toList()))
+                        .bookmarkCount(martShop.getMartBookmarks().size())
+                        .likeCount(itemLikeRepository.countItemLikeByMart(martShop))
+                        .martBookmark(martBookmarkRepository.existsByUserAndMartShop(user, martShop))
+                        .items(getMartItemCreatedAtDesc(martShop, user))
+                        .build())
+                .toList();
     }
 
-    public List<ItemMartNewResponseDto> getMartItem(Long martId, Long userIdx) {
-        User user = userRepository.findByUserIdx(userIdx).get();
+    // 마트의 상품 불러오기 (새상품순)
+    public List<MartWithItemResponseDto.ItemDto> getMartItemCreatedAtDesc(MartShop martShop, User user) {
+
+        List<Item> itemList = itemRepository.findByMartShopOrderByCreatedAtDesc(martShop);
+
+        return itemList.stream()
+                .map(item -> MartWithItemResponseDto.ItemDto.builder()
+                        .itemId(item.getItemId())
+                        .itemImg(item.getProfilePhoto())
+                        .itemName(item.getItemName())
+                        .itemPrice(item.getPrice())
+                        .itemLike(itemLikeRepository.existsByUserAndItem(user, item))
+                        .build())
+                .toList();
+    }
+
+    // 마트 상품 불러오기
+    public List<MartItemResponseDto> getMartItem(Long martId, Long userIdx) {
+        User user = userRepository.findByUserIdx(userIdx)
+                .orElseThrow(() -> new BadRequestException(ResponseStatus.NOT_EXIST_USER));
 
         MartShop martShop = martRepository.findById(martId)
-                .orElseThrow(()-> new BadRequestException(MART_NAME_NOT_FOUND));
+                .orElseThrow(() -> new BadRequestException(MART_NAME_NOT_FOUND));
 
-        return itemService.getMartNewItem(martShop, user);
+        List<Item> itemList = itemRepository.findByMartShopOrderByCreatedAtDesc(martShop);
+
+        return itemList.stream()
+                .map(item -> MartItemResponseDto.builder()
+                            .itemId(item.getItemId())
+                            .itemImg(item.getProfilePhoto())
+                            .itemName(item.getItemName())
+                            .itemPrice(item.getPrice())
+                            .itemLike(itemLikeRepository.existsByUserAndItem(user, item))
+                            // 마트 정보
+                            .mart(MartItemResponseDto.Mart.builder()
+                                    .martId(martShop.getMartShopId())
+                                    .martName(martShop.getName())
+                                    .build())
+                            .build())
+                .toList();
     }
 
+
+    // 오늘의 마트 조회
+    // 랜덤 5개 마트
     public List<MartRecommendedResponseDto> getTodayMart() {
-        List<MartShop> martShopList = martRepository.findRandomMart(PageRequest.of(0, 8));
+        List<MartShop> martShopList = martRepository.findRandomMart(PageRequest.of(0, 5));
         return martShopList.stream()
                 .map(martShop -> {
                     return MartRecommendedResponseDto.builder()
@@ -212,25 +232,26 @@ public class MartService {
                             .martImg(martShop.getProfilePhoto())
                             .martName(martShop.getName())
                             .category(martShop.getMartCategories().stream()
-                                    .map(martCategory -> martCategory.getCategoryName())
+                                    .map(MartCategory::getCategoryName)
                                     .collect(Collectors.toList()))
                             .build();
                 })
                 .collect(Collectors.toList());
     }
 
+    // 마트명으로 10개의 키워드 추천
     public List<String> recommendMartKeyword() {
         List<MartShop> martShopList = martRepository.findRandomMart(PageRequest.of(0, 10));
 
-        List<String> keywordList = martShopList.stream()
-                .map(martShop -> martShop.getName())
+        return martShopList.stream()
+                .map(MartShop::getName)
                 .toList();
-
-        return keywordList;
     }
 
+    // 로그인한 유저가 마트를 소유하고 있는지 확인
     public MartExistResponseDto checkOwnMart(Long userIdx) {
-        User user = userRepository.findById(userIdx).get();
+        User user = userRepository.findById(userIdx)
+                .orElseThrow(() -> new BadRequestException(ResponseStatus.NOT_EXIST_USER));
 
         return MartExistResponseDto.builder()
                 .martExist(martRepository.existsByUser(user))
